Bug 70498 - VIEWING: graphic file wmf image is not displayed correctly
Summary: VIEWING: graphic file wmf image is not displayed correctly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All All
: medium normal
Assignee: Tomaz Vajngerl
URL:
Whiteboard: target:4.3.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2013-10-15 16:07 UTC by John Bakker
Modified: 2015-12-17 07:32 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
odt ducument (132.27 KB, application/vnd.oasis.opendocument.text)
2013-10-15 16:08 UTC, John Bakker
Details
original wmf piucture in pdf (302.73 KB, application/pdf)
2013-10-15 18:26 UTC, John Bakker
Details
Screenshot original wmf File (104.48 KB, image/png)
2013-10-28 11:10 UTC, John Bakker
Details
screenshot wmf file in odt document made in LO 4.1.2.3 (21.09 KB, image/png)
2013-10-28 11:12 UTC, John Bakker
Details
screenshot wmf file in odt document made in LO 4.0.6.2 (24.56 KB, image/png)
2013-10-28 13:04 UTC, John Bakker
Details
Reversion of the causing patch WONT WORK (11.72 KB, patch)
2014-04-17 16:49 UTC, Lennard Wasserthal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Bakker 2013-10-15 16:07:59 UTC

    
Comment 1 John Bakker 2013-10-15 16:08:47 UTC
Created attachment 87672 [details]
odt ducument
Comment 2 John Bakker 2013-10-15 18:26:09 UTC
Created attachment 87687 [details]
original wmf piucture in pdf

the original wmf picture is too large
Comment 3 ign_christian 2013-10-28 03:18:10 UTC
Hello, I can't see any significant difference within your 2 files (tested on LO 4.0.6.2, Win7 32bit).

Could you attach screenshot which shows the problem?
Comment 4 John Bakker 2013-10-28 11:10:17 UTC
Created attachment 88223 [details]
Screenshot original wmf File
Comment 5 John Bakker 2013-10-28 11:12:27 UTC
Created attachment 88224 [details]
screenshot wmf file in odt document made in LO 4.1.2.3
Comment 6 John Bakker 2013-10-28 13:04:04 UTC
Created attachment 88230 [details]
screenshot wmf file in odt document made in LO 4.0.6.2
Comment 7 John Bakker 2013-10-28 14:02:59 UTC
Comment on attachment 88224 [details]
screenshot wmf file in odt document made in LO 4.1.2.3

The problem is that  the values between 0 and 2 are disappeared in LO 4.1.2 in writer, calc and impress
Comment 8 ign_christian 2013-10-30 09:54:21 UTC
John, are you sure producing screenshots with same ODT attached in comment 1? Looks different..
Comment 9 John Bakker 2013-10-30 22:57:15 UTC
(In reply to comment #8)
> John, are you sure producing screenshots with same ODT attached in comment
> 1? Looks different..

Ign

you're right, the first two attachmentsare different than the last three.
Comment 10 Jean-Baptiste Faure 2013-11-24 09:41:30 UTC
Reproducible with version 4.1.4.0.0+ and 4.2.0.0.beta1+ under Linux/Ubuntu.
These versions work as if they add a white bar at the bottom of the graphics.
No problem with version 4.0.6, so set keyword regression.

Thank you for the bug report.
Best regards. JBF
Comment 11 Michael Stahl 2014-02-03 19:50:04 UTC
broken since 4.1.0 release
Comment 12 Andras Timar 2014-04-16 14:18:06 UTC
regression since:
commit 3998d1abb291309ddbbc2c9869736ebb1ea608f0
Author: Lennard Wasserthal <Wasserthal@nefkom.net>
Date:   Sat Feb 9 13:47:38 2013 +0100

    fdo#56886 EMF: Fixes some scaling problems of clipped regions, Twips
Comment 13 Lennard Wasserthal 2014-04-16 19:46:49 UTC
Send the file to Wasserthal@nefkom.net
Comment 14 Lennard Wasserthal 2014-04-16 19:47:09 UTC
(The original WMF file, I mean)
Comment 15 Andras Timar 2014-04-16 19:56:26 UTC
(In reply to comment #14)
> (The original WMF file, I mean)

You can unzip it from the ODT: https://bugs.freedesktop.org/attachment.cgi?id=87672
Comment 16 Lennard Wasserthal 2014-04-17 16:49:00 UTC
Created attachment 97524 [details]
Reversion of the causing patch WONT WORK

I have this patch. It reverts the old one completely, but does not help.
Comment 17 Commit Notification 2014-05-15 18:17:14 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=618d33c2089c7f7741e22a80ffb11f82da1729a4

fdo#70498 work-around scaling in SetClipPath



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Tomaz Vajngerl 2014-05-19 12:07:49 UTC
I This is now fixed in 4.3.. closing.
Comment 19 Robinson Tryon (qubit) 2015-12-17 07:32:54 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]