fdo#70498 work-around scaling in SetClipPath

Scaling needed to be worked-around again so that the image in the
bug report could be drawn correctly. The issue needs some more
investigation how to detect what are the exact conditions that
scaling is needed.

Change-Id: Icd3f57a8ded92c49848feea92dc5a14362718874